--- a/themes/datdiscord.html
+++ b/themes/datdiscord.html
@@ -75,10 +75,10 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Dat Discord</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/jadeonking/Witcher-3-Theme-for-Discord/blob/master/Witcher3.theme.css" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/Viniuau/Dat-Discord/blob/master/Dat%20Discord.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Viniuau</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Viniuau/Dat-Discord/master/Dat%20Discord.theme.css"></iframe>
                     </header>
                 </div>
             </div>
@@ -122,15 +122,6 @@
     <script src="https://betterdocs.net/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script>
-	document.getElementById('iframe1').onload = function() {
-       var cssLink = document.createElement("link") 
-cssLink.href = "https://rawgit.com/Viniuau/Dat-Discord/master/Dat%20Discord.theme.css"; 
-cssLink.rel = "stylesheet"; 
-cssLink.type = "text/css"; 
-window.frames['iframe1'].document.head.appendChild(cssLink);
-    }
-    </script>
 
 </body>
 
