--- a/themes/darkmatter.html
+++ b/themes/darkmatter.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Hammock</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/cosmicsalad/Discord-Themes-and-Plugins/master/themes/DarkMatter/DarkMatter.theme.css"></iframe>
                     </header>
                 </div>
             </div>
@@ -122,15 +122,6 @@
     <script src="https://betterdocs.net/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script>
-	document.getElementById('iframe1').onload = function() {
-       var cssLink = document.createElement("link") 
-cssLink.href = "https://rawgit.com/cosmicsalad/Discord-Themes-and-Plugins/master/themes/DarkMatter/DarkMatter.theme.css"; 
-cssLink.rel = "stylesheet"; 
-cssLink.type = "text/css"; 
-window.frames['iframe1'].document.head.appendChild(cssLink);
-    }
-    </script>
 
 </body>
 
