--- a/themes/sleepingbeauty.html
+++ b/themes/sleepingbeauty.html
@@ -74,10 +74,10 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Sleeping Beauty</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/mrmaple240/Sleeping-Beauty/blob/master/sleepingbeauty.theme.csshttps://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/mrmaple240/Sleeping-Beauty/blob/master/sleepingbeauty.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Maple</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/mrmaple240/Sleeping-Beauty/master/sleepingbeauty.theme.css"></iframe>
                     </header>
                 </div>
             </div>
@@ -121,15 +121,6 @@
     <script src="https://betterdocs.net/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script>
-	document.getElementById('iframe1').onload = function() {
-       var cssLink = document.createElement("link") 
-cssLink.href = "https://rawgit.com/mrmaple240/Sleeping-Beauty/master/sleepingbeauty.theme.css"; 
-cssLink.rel = "stylesheet"; 
-cssLink.type = "text/css"; 
-window.frames['iframe1'].document.head.appendChild(cssLink);
-    }
-    </script>
 
 </body>
 
