--- a/themes.html
+++ b/themes.html
@@ -335,9 +335,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/3fzEnz9.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://i.imgur.com/3fzEnz9.jpg" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/cyanfirewatch.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/denBot/Cyan-Firewatch/blob/master/cyan-firewatch.theme.css" class="plugin-name" target="_blank">Cyan Firewatch</a>
+                            <a href="https://betterdocs.net/themes/cyanfirewatch.html" class="plugin-name" target="_blank">Cyan Firewatch</a>
                             <p class="plugin-desc">Supports all resolutions, transparent cyan/teal-based colour scheme with a scenic Firewatch wallpaper as the background.</p>
                             <div class="plugin-tag-list">
 
