--- a/themes/cleardiscord.html
+++ b/themes/cleardiscord.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-<title>Outerspace</title>
+<title>Clear Discord</title>
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="Outerspace Dark theme" name=description>
+<meta content="A nice and clean theme" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
 <!-- CSS -->
@@ -15,7 +15,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="BetterDiscord Docs" />
-<meta property="og:title" content="Outerspace" />
+<meta property="og:title" content="Clear Discord" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 <!-- Icon -->
 <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
@@ -73,12 +73,12 @@
             <div class="wrapper">
                 <div class="inner">
                     <header class="release-header">
-                    <h1 class="release-title" itemprop="name">Outerspace</h1>
+                    <h1 class="release-title" itemprop="name">Casual Dark</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/Narugokyu/nova-theme/blob/master/space_nova.theme.css" target="_blank" class="btn-release">Download</a>
-                            <div class="btn-author">Narugokyu</div>
+                            <a href="https://github.com/Dddsasul/TeamKappa-theme/blob/master/ClearDiscord.theme.css" target="_blank" class="btn-release">Download</a>
+                            <div class="btn-author">Dddsasul</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Narugokyu/nova-theme/master/space_nova.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Dddsasul/TeamKappa-theme/master/ClearDiscord.theme.css"></iframe>
                     </header>
                 </div>
             </div>
