--- a/themes/assets/discord.html
+++ b/themes/assets/discord.html
@@ -177,6 +177,7 @@ Date: 24/05/2016
                                                         <div></div><span>April 2, 2016</span>
                                                         <div></div>
                                                     </div>
+                                                    <div class="message-group-blocked"><div class="message-group-blocked-btn">1 Blocked Message</div></div>
                                                     <div class="message-group has-divider hide-overflow">
                                                         <div class="avatar-large stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/81388395867156480/7b1707181fda3f006e2b77608e4c692e.jpg&quot;);"></div>
                                                         <div class="comment">
