--- a/themes.html
+++ b/themes.html
@@ -452,7 +452,7 @@
                         
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/mx3M1Fz.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
+                                <img src="https://i.imgur.com/mx3M1Fz.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
                                 <a href="https://betterdocs.net/themes/edgy.html" class="plugin-preview-link" ><i class="fa fa-eye"></i></a>
                             </div>
                             <a href="https://betterdocs.net/themes/edgy.html" class="plugin-name" >Edgy Theme</a>
@@ -472,7 +472,7 @@
                         
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/DCEkFsY.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
+                                <img src="https://i.imgur.com/DCEkFsY.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
                                 <a href="https://betterdocs.net/themes/clearvision_amethyst.html" class="plugin-preview-link" ><i class="fa fa-eye"></i></a>
                             </div>
                             <a href="https://betterdocs.net/themes/clearvision_amethyst.html" class="plugin-name" >ClearVision - Amethyst</a>
