--- a/themes/assets/discord.html
+++ b/themes/assets/discord.html
@@ -179,7 +179,7 @@ Date: 24/05/2016
                                                     </div>
                                                     <div class="message-group-blocked"><div class="message-group-blocked-btn">1 Blocked Message</div></div>
                                                     <div class="message-group has-divider hide-overflow">
-                                                        <div class="avatar-large stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/81388395867156480/7b1707181fda3f006e2b77608e4c692e.jpg&quot;);"></div>
+                                                        <div class="avatar-large stop-animation" style="background-image: url(&quot;https://i.imgur.com/KMKzwYK.jpg&quot;);"></div>
                                                         <div class="comment">
                                                             <div class="message first">
                                                                 <div class="body">
@@ -202,7 +202,7 @@ Date: 24/05/2016
                                                         <div></div>
                                                     </div>
                                                     <div class="message-group has-divider hide-overflow">
-                                                        <div class="avatar-large stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/81388395867156480/7b1707181fda3f006e2b77608e4c692e.jpg&quot;);"></div>
+                                                        <div class="avatar-large stop-animation" style="background-image: url(&quot;https://i.imgur.com/KMKzwYK.jpg&quot;);"></div>
                                                         <div class="comment">
                                                             <div class="message first">
                                                                 <div class="body">
@@ -225,7 +225,7 @@ Date: 24/05/2016
                                                         <div></div>
                                                     </div>
                                                     <div class="message-group hide-overflow">
-                                                        <div class="avatar-large stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/81388395867156480/7b1707181fda3f006e2b77608e4c692e.jpg&quot;);"></div>
+                                                        <div class="avatar-large stop-animation" style="background-image: url(&quot;https://i.imgur.com/KMKzwYK.jpg&quot;);"></div>
                                                         <div class="comment">
                                                             <div class="message first">
                                                                 <div class="body">
@@ -286,7 +286,7 @@ Date: 24/05/2016
                                                 <div style="width: 100%; height: 0px; visibility: hidden;"></div>
                                                 <h2><!-- react-text: 188 -->Owner<!-- /react-text --><!-- react-text: 189 -->—<!-- /react-text --><!-- react-text: 190 -->1<!-- /react-text --></h2>
                                                 <div class="member member-status member-status-online">
-                                                    <div class="avatar-small stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/81388395867156480/7b1707181fda3f006e2b77608e4c692e.jpg&quot;);">
+                                                    <div class="avatar-small stop-animation" style="background-image: url(&quot;https://i.imgur.com/KMKzwYK.jpg&quot;);">
                                                         <div class="status status-online"></div>
                                                     </div>
                                                     <div class="member-inner">
