light and dark discord

--- a/themes/casualdark.html
+++ b/themes/casualdark.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/Quietess/Casual-Dark/blob/master/CasualDark.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Quietness</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Quietess/Casual-Dark/master/CasualDark.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Quietess/Casual-Dark/master/CasualDark.css"></iframe>
                     </header>
                 </div>
             </div>
