--- a/themes/clearvision_amethyst.html
+++ b/themes/clearvision_amethyst.html
@@ -77,7 +77,7 @@
                             <a href="https://github.com/Zerthox/ClearVision/blob/master/themes/ClearVision_Amethyst.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Zerthox</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Zerthox/ClearVision/master/themes/ClearVision_Amethyst.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Zerthox/ClearVision/master/themes/ClearVision_Amethyst.theme.css"></iframe>
                     </header>
                 </div>
             </div>
