--- a/themes/cyanfirewatch.html
+++ b/themes/cyanfirewatch.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/denBot/Cyan-Firewatch/blob/master/cyan-firewatch.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Den</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/denBot/Cyan-Firewatch/master/cyan-firewatch.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/denBot/Cyan-Firewatch/master/cyan-firewatch.theme.css"></iframe>
                     </header>
                 </div>
             </div>
