--- a/themes/darkmatter.html
+++ b/themes/darkmatter.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Hammock</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/cosmicsalad/Discord-Themes-and-Plugins/master/themes/DarkMatter/DarkMatter.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/cosmicsalad/Discord-Themes-and-Plugins/master/themes/DarkMatter/DarkMatter.theme.css"></iframe>
                     </header>
                 </div>
             </div>
