--- a/themes/edgy.html
+++ b/themes/edgy.html
@@ -77,7 +77,7 @@
                             <a href="https://github.com/Puv1s/Edgy-Theme/blob/master/Edgy.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Pu</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Puv1s/Edgy-Theme/master/Edgy.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Puv1s/Edgy-Theme/master/Edgy.theme.css"></iframe>
                     </header>
                 </div>
             </div>
