--- a/themes/originalmodern.html
+++ b/themes/originalmodern.html
@@ -77,7 +77,7 @@
                             <a href="https://github.com/mathiaslsn/OriginalModern/blob/master/mat.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Mat3</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/mathiaslsn/OriginalModern/master/mat.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/mathiaslsn/OriginalModern/master/mat.theme.css"></iframe>
                     </header>
                 </div>
             </div>
