--- a/themes/overwatch.html
+++ b/themes/overwatch.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/Matthaz/Overwatch_theme/blob/master/Overwatch.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Matt</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Matthaz/Overwatch_theme/master/Overwatch.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Matthaz/Overwatch_theme/master/Overwatch.theme.css"></iframe>
                     </header>
                 </div>
             </div>
