--- a/themes/red&black.html
+++ b/themes/red&black.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/CurimuChizu/CC-Themes/blob/master/CC-Themes/Red.n.Black.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">CC</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.htmltheme=https://raw.githubusercontent.com/CurimuChizu/CC-Themes/master/CC-Themes/Red.n.Black.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.htmltheme=https://raw.githubusercontent.com/CurimuChizu/CC-Themes/master/CC-Themes/Red.n.Black.theme.css"></iframe>
                     </header>
                 </div>
             </div>
