--- a/themes/shadesofred.html
+++ b/themes/shadesofred.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/trueprominency/Shades-of-Red-Theme/blob/master/shades-of-red.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">TrueProminency</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/trueprominency/Shades-of-Red-Theme/master/shades-of-red.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/trueprominency/Shades-of-Red-Theme/master/shades-of-red.theme.css"></iframe>
                     </header>
                 </div>
             </div>
