--- a/themes/shinyoctowaffle.html
+++ b/themes/shinyoctowaffle.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/PepeLUL/Shiny-Octo-Waffle-Theme/blob/master/Shiny.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Kappa</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/PepeLUL/Shiny-Octo-Waffle-Theme/master/Shiny.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/PepeLUL/Shiny-Octo-Waffle-Theme/master/Shiny.theme.css"></iframe>
                     </header>
                 </div>
             </div>
