--- a/themes/sleepingbeauty.html
+++ b/themes/sleepingbeauty.html
@@ -77,7 +77,7 @@
                             <a href="https://github.com/mrmaple240/Sleeping-Beauty/blob/master/sleepingbeauty.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Maple</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/mrmaple240/Sleeping-Beauty/master/sleepingbeauty.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/mrmaple240/Sleeping-Beauty/master/sleepingbeauty.theme.css"></iframe>
                     </header>
                 </div>
             </div>
