--- a/themes/wheattransparency.html
+++ b/themes/wheattransparency.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/Zekeeh/Wheat-Transparency/blob/master/WheatTransparency.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Zekeeh</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Zekeeh/Wheat-Transparency/master/WheatTransparency.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Zekeeh/Wheat-Transparency/master/WheatTransparency.theme.css"></iframe>
                     </header>
                 </div>
             </div>
