--- a/themes/witcher3.html
+++ b/themes/witcher3.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/jadeonking/Witcher-3-Theme-for-Discord/blob/master/Witcher3.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Jadeonking</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/jadeonking/Witcher-3-Theme-for-Discord/master/Witcher3.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/jadeonking/Witcher-3-Theme-for-Discord/master/Witcher3.theme.css"></iframe>
                     </header>
                 </div>
             </div>
