--- a/themes/akame.html
+++ b/themes/akame.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/llcoll/Discord-Themes/blob/master/Themes/Akame/Akame.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">llcoll</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/llcoll/Discord-Themes/master/Themes/Akame/Akame.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/llcoll/Discord-Themes/master/Themes/Akame/Akame.theme.css"></iframe>
                     </header>
                 </div>
             </div>
