--- a/themes/beardsmaterialtheme.html
+++ b/themes/beardsmaterialtheme.html
@@ -77,7 +77,7 @@
                             <a href="https://github.com/BeardDesign1/Material-design-theme/blob/themes/Beard's-Material-theme-for-Discord.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Beard Design</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/BeardDesign1/Material-design-theme/themes/Beard's-Material-theme-for-Discord.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/BeardDesign1/Material-design-theme/themes/Beard's-Material-theme-for-Discord.theme.css"></iframe>
                     </header>
                 </div>
             </div>
