--- a/themes/cleardiscord.html
+++ b/themes/cleardiscord.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/Dddsasul/TeamKappa-theme/blob/master/ClearDiscord.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Dddsasul</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Dddsasul/TeamKappa-theme/master/ClearDiscord.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Dddsasul/TeamKappa-theme/master/ClearDiscord.theme.css"></iframe>
                     </header>
                 </div>
             </div>
