--- a/themes/datdiscord.html
+++ b/themes/datdiscord.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/Viniuau/Dat-Discord/blob/master/Dat%20Discord.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Viniuau</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Viniuau/Dat-Discord/master/Dat%20Discord.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Viniuau/Dat-Discord/master/Dat%20Discord.theme.css"></iframe>
                     </header>
                 </div>
             </div>
