--- a/themes/clearvision_emerald.html
+++ b/themes/clearvision_emerald.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-<title>Casual Dark</title>
+<title>ClearVision - Emerald</title>
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="A nice sleek and dark Discord skin" name=description>
+<meta content="A peaceful, green theme with customizable colors & background!" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
-<!-- CSS -->
 <!-- CSS -->
 <link rel="stylesheet" href="../stylesheets/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
@@ -15,7 +14,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="BetterDiscord Docs" />
-<meta property="og:title" content="Casual Dark" />
+<meta property="og:title" content="ClearVision - Emerald" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 <!-- Icon -->
 <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
@@ -74,12 +73,12 @@
             <div class="wrapper">
                 <div class="inner">
                     <header class="release-header">
-                    <h1 class="release-title" itemprop="name">Casual Dark</h1>
+                    <h1 class="release-title" itemprop="name">ClearVision - Emerald</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/Quietess/Casual-Dark/blob/master/CasualDark.css" target="_blank" class="btn-release">Download</a>
-                            <div class="btn-author">Quietness</div>
+                            <a href="https://github.com/Zerthox/ClearVision/blob/master/themes/ClearVision_Emerald.theme.css" target="_blank" class="btn-release">Download</a>
+                            <div class="btn-author">Zerthox</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Quietess/Casual-Dark/master/CasualDark.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Zerthox/ClearVision/master/themes/ClearVision_Emerald.theme.css"></iframe>
                     </header>
                 </div>
             </div>
