--- a/themes/shadesofred.html
+++ b/themes/shadesofred.html
@@ -47,6 +47,7 @@
       <a href="https://betterdocs.net/" id="logo">BetterDiscord</a>
     </h1>
                 <nav id="main-nav">
+                    <a href="https://betterdocs.net" class="main-nav-link">Docs</a>
                     <a href="https://betterdocs.net/news/" class="main-nav-link">News</a>
                     <a href="https://betterdocs.net/plugin_api.html" class="main-nav-link">API</a>
                     <a href="https://betterdocs.net/themes.html" class="main-nav-link">Themes</a>
@@ -100,6 +101,7 @@
     <nav id="mobile-nav">
         <div id="mobile-nav-inner">
             <ul id="mobile-nav-list">
+                <a href="https://betterdocs.net" class="mobile-nav-link">Docs</a>
                 <a href="https://betterdocs.net/news/" class="mobile-nav-link">News</a>
                 <a href="https://betterdocs.net/plugin_api.html" class="mobile-nav-link">API</a>
                 <a href="https://betterdocs.net/themes.html" class="mobile-nav-link">Themes</a>
