--- a/themes/discordify.html
+++ b/themes/discordify.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-<title>Edgy Theme</title>
+<title>Discordify</title>
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
