--- a/themes/assets/darkdiscord.html
+++ b/themes/assets/darkdiscord.html
@@ -46,7 +46,7 @@
                                     <div class="guild">
                                         <div draggable="true">
                                             <div class="guild-inner" draggable="false" style="border-radius: 25px;">
-                                                <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/153708594091655168/c207f857ca016cbd6fe2811e590d3b18.jpg&quot;);"></a>
+                                                <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quothttps://cdn.discordapp.com/icons/153708594091655168/297695be9596b5ccde7bff923e9ff61b.jpg&quot;);"></a>
                                             </div>
                                         </div>
                                         <div class="badge">10</div>
@@ -54,14 +54,14 @@
                                     <div class="guild selected unread">
                                         <div draggable="true">
                                             <div class="guild-inner" draggable="false" style="border-radius: 15px;">
-                                                <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/86004744966914048/6e5729ed5c12d5af558d80d7a194c3f9.jpg&quot;);"></a>
+                                                <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/86004744966914048/c0b870197488544acc4835e6f9e8beec.jpg&quot;);"></a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="guild unread">
                                         <div draggable="true">
                                             <div class="guild-inner" draggable="false" style="border-radius: 25px;">
-                                                <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/41771983423143937/ae140f33228348df347067059474bb11.jpg&quot;);"></a>
+                                                <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/156239548781690880/50f784379184abfbc1929f071b1a8a50.jpg&quot;);"></a>
                                             </div>
                                         </div>
                                     </div><button class="guild guilds-add">+</button></div>
@@ -92,7 +92,7 @@
                                             <ul class="channel-voice-states">
                                                 <li class="">
                                                     <div class="" draggable="true">
-                                                        <div class="avatar-small stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/172218388880293888/e64c4a0cc7d041422ee617e4d0548414.jpg&quot;);"></div><span>Omniscient</span></div>
+                                                        <div class="avatar-small stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/172218388880293888/6dcc47ad37b990a3770a8de14a89bb60.jpg&quot;);"></div><span>Omniscient</span></div>
                                                 </li>
                                                 <li class="speaking">
                                                     <div class="" draggable="true">
