removed some links

--- a/themes/assets/darkdiscord.html
+++ b/themes/assets/darkdiscord.html
@@ -39,7 +39,7 @@
                                     <div class="scroller guilds">
                                         <div class="guild">
                                             <div class="guild-inner" draggable="false" style="border-radius: 25px; background-color: rgb(46, 49, 54);">
-                                                <a draggable="false" href="/channels/@me">
+                                                <a draggable="false" href="#">
                                                     <div class="friends-icon"></div>
                                                 </a>
                                             </div>
@@ -49,7 +49,7 @@
                                         <div class="guild">
                                             <div draggable="true">
                                                 <div class="guild-inner" draggable="false" style="border-radius: 25px;">
-                                                    <a draggable="false" class="avatar-small" href="/channels/114371297156399110/114371297156399110" style="background-image: url(&quot;https://cdn.discordapp.com/icons/153708594091655168/297695be9596b5ccde7bff923e9ff61b.jpg&quot;);"></a>
+                                                    <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/153708594091655168/297695be9596b5ccde7bff923e9ff61b.jpg&quot;);"></a>
                                                 </div>
                                             </div>
 											<div class="badge">10</div>
@@ -57,14 +57,14 @@
                                         <div class="guild selected unread">
                                             <div draggable="true">
                                                 <div class="guild-inner" draggable="false" style="border-radius: 15px;">
-                                                    <a draggable="false" class="avatar-small" href="/channels/153708594091655168/174728048380346368" style="background-image: url(&quot;https://cdn.discordapp.com/icons/86004744966914048/c0b870197488544acc4835e6f9e8beec.jpg&quot;);"></a>
+                                                    <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/86004744966914048/c0b870197488544acc4835e6f9e8beec.jpg&quot;);"></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="guild unread">
                                             <div draggable="true">
                                                 <div class="guild-inner" draggable="false" style="border-radius: 25px;">
-                                                    <a draggable="false" class="avatar-small" href="/channels/86004744966914048/86004744966914048" style="background-image: url(&quot;https://cdn.discordapp.com/icons/156239548781690880/50f784379184abfbc1929f071b1a8a50.jpg&quot;);"></a>
+                                                    <a draggable="false" class="avatar-small" href="#" style="background-image: url(&quot;https://cdn.discordapp.com/icons/156239548781690880/50f784379184abfbc1929f071b1a8a50.jpg&quot;);"></a>
                                                 </div>
                                             </div>
                                         </div>
