--- a/install_mac.html
+++ b/install_mac.html
@@ -98,7 +98,7 @@
                                         <p>This is a quick and easy tutorial for people with a Mac so they can install BetterDiscord!</p>
                                         <ul>
                                             <li>
-                                                <p>Click the this <a href="https://github.com/iVEnoVaLue/BetterPlugins/blob/master/app/OSX/Installer/BetterDiscord.pkg?raw=true">Link</a> to download BetterDiscord</p>
+                                                <p>Click this <a href="https://github.com/iVEnoVaLue/BetterPlugins/blob/master/app/OSX/Installer/BetterDiscord.pkg?raw=true">Link</a> to download BetterDiscord</p>
                                                 <li>
 						   <p>When the download is complete, run the installer by double clicking on the file (.pkg), or right click and click on "Open"</li>
 						<li><p>After agreeing to the Terms Of Service, and trust the code certificate, select the version(s) of Discord that you already have <b>installed</b> and click "Install"</li>
