--- a/themes/assets/lightdiscord.html
+++ b/themes/assets/lightdiscord.html
@@ -372,7 +372,7 @@ Hold shift to upload directly.</pre></div>
             </div>
             <div class="tooltips"></div>
             <div class="tutorial-indicators"></div>
-            <div class="theme-dark"></div><span></span>
+            <div class="theme-light"></div><span></span>
             <!-- react-empty: 104 --><span class="incoming-calls"></span>
             <!-- react-empty: 681 -->
         </div>
