--- a/themes/cleardiscord.html
+++ b/themes/cleardiscord.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Casual Dark</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/Dddsasul/TeamKappa-theme/blob/master/ClearDiscord.theme.css" target="_blank" class="btn-release">Download</a>
+                            <a href="http://sh.st/6Qpnt" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Dddsasul</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Dddsasul/TeamKappa-theme/master/ClearDiscord.theme.css"></iframe>
