--- a/themes/edgy.html
+++ b/themes/edgy.html
@@ -74,7 +74,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Edgy Theme</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/Puv1s/Edgy-Theme/blob/master/Edgy.theme.css" target="_blank" class="btn-release">Download</a>
+                            <a href="http://sh.st/6YTSO" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Pu</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Puv1s/Edgy-Theme/master/Edgy.theme.css"></iframe>
