--- a/themes/duskcord.html
+++ b/themes/duskcord.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">DuskCord</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/jadeonking/WitcherCord/blob/master/Themes/DuskCord.theme.css" target="_blank" class="btn-release">Download</a>
+                            <a href="http://sh.st/6YOmv" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Jadeonking</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/jadeonking/WitcherCord/master/Themes/DuskCord.theme.css"></iframe>
