--- a/themes/originalmodern.html
+++ b/themes/originalmodern.html
@@ -74,7 +74,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Original Modern</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/mathiaslsn/OriginalModern/blob/master/mat.theme.css" target="_blank" class="btn-release">Download</a>
+                            <a href="http://sh.st/6YAlr" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Mat3</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/mathiaslsn/OriginalModern/master/mat.theme.css"></iframe>
