--- a/themes/red&black.html
+++ b/themes/red&black.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Red & Black</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/CurimuChizu/CC-Themes/blob/master/CC-Themes/Red.n.Black.theme.css" target="_blank" class="btn-release">Download</a>
+                            <a href="http://sh.st/6YGfJ" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">CC</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/CurimuChizu/CC-Themes/master/CC-Themes/Red.n.Black.theme.css"></iframe>
