--- a/plugins.html
+++ b/plugins.html
@@ -434,7 +434,7 @@
                         </li>
                         
                         <li class="plugin on">
-                            <a href="http://sh.st/6KhUK" class="plugin-name" target="_blank">LineNumbers</a>
+                            <a href="http://sh.st/6KvKb" class="plugin-name" target="_blank">LineNumbers</a>
                             <p class="plugin-desc">Add line numbers to code blocks</p>
                             <div class="plugin-tag-list">
 
