Add a small precision in "Installing on Linux"
Not everyone can guess in what folder you have to run the command.

--- a/install_linux.html
+++ b/install_linux.html
@@ -106,7 +106,7 @@
                                                     <li><b>Option 2:</b> Download the files from the makers <a href=https://github.com/Jiiks/BetterDiscordApp/tree/master/Installers/Electron target=_blank>Github</a>.</ul>
                                             <p>Now for the more complicated part of this installation.</p>
                                             <ul>
-                                                <li>Launch terminal and run <code>npm install</code>
+                                                <li>Launch terminal in the <code>Installers/Electron</code> folder and run <code>npm install</code>
                                                     <li>Now in terminal run <code>./node_modules/.bin/electron ./src</code> and it will open the installer
                                                         <li>If the installer freezes during the installation, run <code>sudo chown yourname /usr/share/discord-canary/resources</code>
                                                             <li>Rename <code>Utils.js</code> to <code>utils.js</code> in the BetterDiscord installation directory
