--- a/install_mac.html
+++ b/install_mac.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
+<html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#"><head>
 <head>
 <title>Installing BetterDiscord on Mac</title>
 <meta charset=utf-8>
